cards image change using onmouseover onmouseout added

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           <!-- single card  -->
           <div class="col-lg-4 col-md-6 ">
             <div class="px-3 py-4 bg-white text-center shadow-sm card">
-              <img src="images/shoes/shoe-1.png" class="img-fluid mb-4" alt="">
+              <img src="images/shoes/shoe-1.png" class="img-fluid mb-4" id="shoe-1" alt="" onmouseover="setNewImage('shoe-1','images/shoes/shoe-3.png')" onmouseout=" setOldImage('shoe-1','images/shoes/shoe-1.png')">
               <h4 class="fw-bold mb-3">Reebok Dart Men’s Shoes</h4>
               <p>Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint.</p>
@@ -175,7 +175,7 @@
           <!-- single card  -->
           <div class="col-lg-4 col-md-6 ">
             <div class="px-3 py-4  bg-white text-center shadow-sm card">
-              <img src="images/shoes/shoe-2.png" class="img-fluid mb-4" alt="">
+              <img src="images/shoes/shoe-2.png" id="shoe-2" class="img-fluid mb-4" alt="" onmouseover="setNewImage('shoe-2','images/shoes/shoe-1.png')" onmouseout=" setOldImage('shoe-2','images/shoes/shoe-2.png')">
               <h4 class="fw-bold mb-3">Reebok Pump</h4>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, est.
               </p>
@@ -187,11 +187,11 @@
           <!-- single card  -->
           <div class="col-lg-4 col-md-6 ">
             <div class="px-3 py-4  bg-white text-center shadow-sm card">
-              <img src="images/shoes/shoe-3.png" class="img-fluid mb-4" alt="">
+              <img src="images/shoes/shoe-3.png" class="img-fluid mb-4" id="shoe-3" alt="" onmouseover="setNewImage('shoe-3','images/shoes/shoe-1.png')" onmouseout=" setOldImage('shoe-3','images/shoes/shoe-3.png')">
               <h4 class="fw-bold mb-3">Reebok All Terrain</h4>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, est.</p>
               <h4 class="mb-3">$699</h4>
-              <button class=" btn bg-dark text-white  btn-lg border-0 buy-now-btn">BUY NOW <i class="fas fa-arrow-right ms-3"></i></button>             
+              <button class=" btn bg-dark text-white  btn-lg border-0 buy-now-btn">BUY NOW <i class="fas fa-arrow-right ms-3"></i></button>
             </div>
           </div>  
           <!-- single card  end-->
@@ -212,7 +212,7 @@
           <!-- single card  -->
           <div class="col-lg-4 col-md-6 ">
             <div class="px-3 py-4 bg-white text-center shadow-sm card">
-              <img src="images/bags/bag-1.png" class="img-fluid mb-4" alt="">
+              <img src="images/bags/bag-1.png" onmouseover="setNewImage('bag-1','images/bags/bag-2.png')" onmouseout=" setOldImage('bag-1','images/bags/bag-1.png')" class="img-fluid mb-4" id="bag-1" alt="">
               <h4 class="fw-bold mb-3">Ison Backpack</h4>
               <p>Amet minim mollit non deserunt ullamco 
                 est sit aliqua dolor do amet sint.</p>
@@ -224,7 +224,7 @@
           <!-- single card  -->
           <div class="col-lg-4 col-md-6 ">
             <div class="px-3 py-4 bg-white text-center shadow-sm card">
-              <img src="images/bags/bag-2.png" class="img-fluid mb-4" alt="">
+              <img src="images/bags/bag-2.png" class="img-fluid mb-4" id="bag-2" alt="" onmouseover="setNewImage('bag-2','images/bags/bag-3.png')" onmouseout=" setOldImage('bag-2','images/bags/bag-2.png')">
               <h4 class="fw-bold mb-3">Biaowang Backpack</h4>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, est.
               </p>
@@ -236,7 +236,7 @@
           <!-- single card  -->
           <div class="col-lg-4 col-md-6 ">
             <div class="px-3 py-4  bg-white text-center shadow-sm card">
-              <img src="images//bags/bag-3.png" class="img-fluid mb-4" alt="">
+              <img src="images//bags/bag-3.png" class="img-fluid mb-4" id="bag-3" alt="" onmouseover="setNewImage('bag-3','images/bags/bag-1.png')" onmouseout=" setOldImage('bag-3','images/bags/bag-3.png')">
               <h4 class="fw-bold mb-3">Dxyizu WS54 Smart</h4>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, est.</p>
               <h4 class="mb-3">$699</h4>
