double click background color change added

--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
 
 
     <!-- contact us start -->
-    <section class="py-5 bg-white">
-      <div class="container bg-pink-light rounded-3  py-5">
+    <section class="py-5 bg-white" >
+      <div id="contact" class="container bg-pink-light rounded-3  py-5">
         <div class="row d-flex  justify-content-center">
           <div class="col-md-12 text-center mt-5">
             <h2 class="mt-5">LET'S STAY IN TOUCH</h2>
@@ -276,9 +276,5 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
-    <script>
-
-
-    </script>
 </body>
 </html>
